REGRESSION: getBoundingClientRect() method of Range incorrectly returns null for collapsed Range https://bugs.webkit.org/show_bug.cgi?id=65324

Reviewed by Ryosuke Niwa.

Source/WebCore:

Update to more closely match the spec.

* dom/Range.cpp:
(WebCore::Range::getClientRects):
Return an empty ClientRectList instead of null when the range is empty.

(WebCore::Range::getBoundingClientRect):
Always return a ClientRect, even for an empty bounding rect.

LayoutTests:

* fast/dom/Range/getBoundingClientRect-expected.txt:
* fast/dom/Range/getBoundingClientRect.html:
* fast/dom/Range/getClientRects-expected.txt:
* fast/dom/Range/getClientRects.html:
Add test cases for empty and collapsed ranges.


Canonical link: https://commits.webkit.org/81232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92089 268f45cc-cd09-0410-ab3c-d52691b4dbfc